--- a/views/css/front.css
+++ b/views/css/front.css
@@ -4,9 +4,14 @@
 	height: 80px; 
 	border: 1px solid gray; 
 	margin: 1px;
+	overflow: hidden;
 }
 .webstrumAdditionalPhotoRow img {
 	object-fit: cover;
+	transition: 0.3s;
+}
+.webstrumAdditionalPhotoRow .photoCol:hover img{
+	scale: 1.2;
 }
 .webstrumAdditionalPhotoRow .photoCol:hover{
 	opacity: 0.7;
